--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,9 @@ p {
     font-family: "Fira Sans", sans-serif;
 }
 
+.hero {
+    background-image: linear-gradient(45deg,rgba(17,17,17,0.50),rgba(17,17,17,0.50)), url('./../public/images/chef-cooking1.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
