--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,25 @@ p {
     background-size: cover;
 }
 
+@media screen and (max-width: 440px) {
+    .thead {
+        display: none;
+    }
+    .tbody {
+        margin-top: 25px;
+    }
+    .tbody, .tr, .td {
+        display: block;
+        width: 100%;
+        text-align: center;
+        padding: 0;
+        font-size: 18px;
+    }
+    .td {
+        border-top: 1px solid #28282833;
+    }
+    .preparing-btn {
+        margin: 20px auto;
+    }
+    
+}
